# de-template

./: template.yaml
skeleton/: Makefile  README.md  catalog-info.yaml
skeleton/conf/default/: catalog.yml  parameters.yml
skeleton/src/de_modules/sample_layer/: sample_module.py
skeleton/src/de_modules/schema/: schema.py
{{cookiecutter.project_name}}/: Makefile  pyproject.toml  setup.py
{{cookiecutter.project_name}}/src/common_utils/config/: config_parser.py
{{cookiecutter.project_name}}/src/common_utils/utils/: ge.py  helpers.py  io.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}_common_utilities/config/: config_parser.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}_common_utilities/utils/: helpers.py  io.py  spark.py  utils.py
